# Illuminator_hem

./: creator_multienergyCase.py  creator_multienergyCase_hem.py  environment1.yml  hempvdata.py  pv_wrapper.py  pyproject.toml  sample.py  simulation creator_multienergyCase.py
Cases/MultienergyCase/: config.xml  connection.xml
Models/Elenetwork/: electricity_network_model.py
Models/PV/: pv_hem_model.py  pv_hem_mosaik.py
Models/PV_HEM/: pv_hem_model.py  pv_hem_mosaik.py
Result/: Emarket_results.csv  Ftrading_results.csv  RTprice_result.csv  forecast.csv
Result/GameCase/: results.csv
Result/MultienergyCase/: results.csv
Scenarios/: interpolated_external_conditions.txt
core/: external_conditions.py  material_properties.py  pipework.py  project.py  simulation_time.py  units.py
core/energy_supply/: elec_battery.py  energy_supply.py  pv.py
core/heating_systems/: boiler.py  emitters.py  heat_battery.py  heat_network.py  heat_pump.py  storage_tank.py
core/space_heat_demand/: building_element.py  internal_gains.py  ventilation.py  zone.py
core/water_heat_demand/: bath.py  dhw_demand.py
