[tool.poetry]
name = "illuminator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
mosaik = "^3.3.3"
pandas = "^2.2.2"
numpy = "^2.0.0"
mosaik-api = "^3.0.6"
setuptools = "^71.0.1"
lxml = "^5.2.2"
paho-mqtt = "^2.1.0"
arrow = "^1.3.0"
tespy = "^0.7.5"
cvxpy = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
